# fitcoachAI

./: .gitignore  README.md  main.py  pyproject.toml
app/: config.py  main.py
app/agents/: memory_agent.py  planner_agent.py  rag_agent.py  state.py
app/data/: demo_user.json  memory_summary.md  vector_store.json  workout_history.json
app/data/exercise_knowledge/: 01_recovery_rules.md  02_training_goals.md  03_dumbbell_exercises.md  04_bodyweight_exercises.md  05_warmup_cooldown.md  06_exercise_subtitutions.md
app/data/generated_workouts/2026-06-10_16-58-04/: rag_debug.json  rag_debug.md  workout_plan.md
app/data/generated_workouts/2026-06-10_18-52-24_accepted/: checkin.json  rag_debug.json  rag_debug.md  workout_plan.md
app/memory/: memory_store.py  memory_updater.py
app/rag/: build_vector_store.py  retriever.py
app/workflows/: run_workout.py  workout_graph.py
tests/: test1.json
